fix: Spacing in `HeroBlock` on smaller viewports

--- a/modules/hanna-css/src/css/HeroBlock.scss
+++ b/modules/hanna-css/src/css/HeroBlock.scss
@@ -19,9 +19,7 @@
   }
   .HeroBlock__image {
     display: block;
-    margin: 0 cols_pct(-1);
-    margin-top: grid-units(-1);
-    margin-bottom: grid-units(2);
+    margin: $var--space-2 $var--grid-column--neg;
     order: 1;
   }
   .HeroBlock__summary {
